// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer renders correctly with filters 1`] = `
<Styled(styled.div)>
  <List />
  <styled.div>
    <styled.div
      phone="100"
    >
      <Component />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`AppContainer renders correctly without filters 1`] = `
<Styled(styled.div)>
  <styled.div>
    <styled.div
      phone="100"
    >
      <Component />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`Wrapper renders correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c0 {
  font-family: Roboto,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  color: #37474f;
}

.c0 * {
  box-sizing: border-box;
}

<div
  class="c0 c1"
>
  
</div>
`;
